methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:13: error: Unmatched closing brace '}' ignored here
}
^